WinInk: Simulate native mouse events for handled pen events

The code now simulates native mouse events with `SetCursorPos` and
`SendInput` for pen pointer events whose QTabletEvents are handled by
the widgets, so that the cursor position is updated to get correct
results from QCursor::pos().

BUG: 386475
BUG: 386476
Differential Revision: https://phabricator.kde.org/D8801

(cherry picked from commit b0dbfeb13c368ce262a2e959fd1ffa0bca32f099)